doc: add hint regarding running on semeru-18